--- a/my favourite place/my favourite place.html
+++ b/my favourite place/my favourite place.html
@@ -1,7 +1,7 @@
-<DOCTYPE html>
+<!DOCTYPE html>
     <html>
         <head>
-        
+        <link rel="icon" type="image/jpeg" href="download.jpeg">
             <title> Egypt</title>
             
         </head>
@@ -23,8 +23,11 @@ was one of the earliest civilizations in the world, known for its advancements i
         <h2>Dangers of visiting egypt</h2>
             <p><strong>WARNING</strong> While Egypt is a beautiful country, it is important to be aware of the potential dangers when visiting. Travelers should be cautious of political instability, especially in certain regions. It is also advisable to stay informed about local customs and laws to ensure a safe and respectful visit.</p>
             <img src="https://i2-prod.dailyrecord.co.uk/article32654820.ece/ALTERNATES/s1023/0_GettyImages-1448134492.jpg" width="900" height="400" alt="Caution sign in Egypt">
-<p>I would love to hear you experiance in Egypt, Please email me on <a href="malto:joelww1556@gmail.com">joelww1556@gmail.com</a></p>
-<a href="#top">Back to top</a>
+<p>I would love to hear your experience in Egypt. Please email me at <a href="mailto:joelww1556@gmail.com">joelww1556@gmail.com</a></p>
+<a href="#top">
+    <button>Back to top</button>
+
+</a>
 <!--this is a link that will link me back to top of page-->
         </body>
     </html>
